fix(develop): sticky navbar, dark mode for some sections

--- a/src/components/ScrollToTop/ScrollToTop.css
+++ b/src/components/ScrollToTop/ScrollToTop.css
@@ -25,7 +25,7 @@
   }
   
   .scroll-to-top-button:hover {
-    background-color: #FFC14A;
+    background-color: #ceb04e;
     transform: scale(1.1);
   }
   
